integration main product

--- a/src/Components/Assets/css/Style.css
+++ b/src/Components/Assets/css/Style.css
@@ -68,3 +68,6 @@
 .custom-scrollbar:hover::-webkit-scrollbar-thumb:hover {
   background-color: lightgray; /* Darker grey on hover */
 }
+.ant-form-item {
+  margin-bottom: 0px !important;
+}
