--- a/src/Components/Assets/css/Style.css
+++ b/src/Components/Assets/css/Style.css
@@ -1,8 +1,8 @@
 /* Sidebar.css */
-.ant-layout-sider {
+/* .ant-layout-sider {
     background: linear-gradient(135deg, #4e73df, #1cc88a);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
+  } */
   
   .ant-menu-item {
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -11,24 +11,18 @@
 
   /* For mobile view */
 @media (max-width: 768px) {
-  .ant-layout-sider {
-    width: 80px !important; /* Adjust width for mobile */
-  }
+   /* .ant-layout-sider {
+    width: 80px !important; 
+  }  */
 
-  .ant-menu-inline {
-    display: none; /* Hide inline menu on mobile */
-  }
+  /* .ant-menu-inline {
+    display: none; 
+  } */
 }
 .ant-card .ant-card-body {
   padding: 13px !important;
 }
 
-/* Override Ant Design Layout width */
-:where(.css-dev-only-do-not-override-1wwf28x).ant-layout.ant-layout-has-sider > .ant-layout,
-:where(.css-dev-only-do-not-override-1wwf28x).ant-layout.ant-layout-has-sider > .ant-layout-content {
-    width: 100% !important;  /* Ensure width is not 0px */
-}
-/* Custom scrollbar styles with higher specificity */
 
 
 
@@ -164,4 +158,30 @@
   .ant-row {
       margin-left: 0 !important;
   }
+}
+.ant-table-thead > tr > th {
+  background-color: #e9e9e9 !important;
+}
+/* Custom scrollbar for the table */
+.custom-scroll .ant-table-body {
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: #c1c1c1 transparent;
+}
+
+.custom-scroll .ant-table-body::-webkit-scrollbar {
+  width: 5px; /* Thin scrollbar */
+  height: 5px;
+}
+
+.custom-scroll .ant-table-body::-webkit-scrollbar-thumb {
+  background: #888; /* Scrollbar color */
+  border-radius: 10px; /* Rounded corners */
+}
+
+.custom-scroll .ant-table-body::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Darker color on hover */
+}
+
+.custom-scroll .ant-table-body::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Track color */
 }
