--- a/src/Components/Assets/css/Style.css
+++ b/src/Components/Assets/css/Style.css
@@ -185,3 +185,6 @@
 .custom-scroll .ant-table-body::-webkit-scrollbar-track {
   background: #f1f1f1; /* Track color */
 }
+.ant-table-wrapper .ant-table.ant-table-small .ant-table-tbody>tr>td{
+  padding: 1px 8px !important;
+}
