--- a/src/Components/Assets/css/Style.css
+++ b/src/Components/Assets/css/Style.css
@@ -347,7 +347,7 @@
 }
 /* sidebar colur */
 .ant-menu-light .ant-menu-item {
-  color: #c1c1c1 !important;
+  color: #acc4e2 !important;
 
 }
 .ant-menu-item-selected {
@@ -364,3 +364,45 @@
 }
 /* dashboard */
 
+/* Style.css */
+
+.custom-scrollbar .ant-menu-submenu-title {
+  font-size: 12px; /* Reduce font size */
+  padding-left: 10px !important; /* Align from start */
+}
+
+.custom-scrollbar .ant-menu-item {
+  font-size: 12px; /* Reduce font size */
+  padding-left: 10px !important; /* Align from start */
+}
+.ant-menu-submenu-popup .ant-menu-vertical.ant-menu{
+  background-color: #150A4E;
+}
+.custom-date-input {
+    display: flex;
+    align-items: center;
+    border: 1px solid #d9d9d9;
+    border-radius: 6px;
+    padding: 5px 10px;
+    background-color: #fff;
+    cursor: pointer;
+    transition: border-color 0.3s;
+}
+
+.custom-date-input:hover {
+    border-color: #40a9ff;
+}
+
+.custom-date-input input {
+    border: none;
+    outline: none;
+    width: 100%;
+    padding: 5px;
+    font-size: 14px;
+    background-color: transparent;
+}
+
+.calendar-icon {
+    margin-left: 8px;
+    color: #a3ccf2;
+}
