--- a/src/Components/Assets/css/Style.css
+++ b/src/Components/Assets/css/Style.css
@@ -159,9 +159,9 @@
       margin-left: 0 !important;
   }
 }
-.ant-table-thead > tr > th {
+/* .ant-table-thead > tr > th {
   background-color: #4FBE91 !important;
-}
+} */
 /* Custom scrollbar for the table */
 .custom-scroll .ant-table-body {
   scrollbar-width: thin; /* For Firefox */
@@ -185,9 +185,9 @@
 .custom-scroll .ant-table-body::-webkit-scrollbar-track {
   background: #f1f1f1; /* Track color */
 }
-.ant-table-wrapper .ant-table.ant-table-small .ant-table-tbody>tr>td{
+/* .ant-table-wrapper .ant-table.ant-table-small .ant-table-tbody>tr>td{
   padding: 1px 8px !important;
-}
+} */
 .ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload-list.ant-upload-list-picture-card .ant-upload-list-item
 {
   height: 66% !important;
@@ -494,3 +494,74 @@
 
 
 }
+/* button */
+.animated-button {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  background-color: #443a72; /* Light initial color */
+  color: #fafafa; /* Dark text for contrast */
+  /* font-weight: bold; */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  z-index: 1; /* Ensure text is above pseudo-element */
+}
+
+.animated-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, #4a90e2, #8b91e6); /* Bright gradient colors */
+  transition: all 0.3s ease;
+  z-index: 0; /* Ensure animation is behind text */
+}
+
+.animated-button:hover::before {
+  left: 0; /* Slide in from left */
+}
+
+.animated-button span {
+  position: relative;
+  z-index: 2; /* Ensure text is always above the pseudo-element */
+}
+
+.animated-button:hover {
+  color: white; /* Bright text on hover */
+}
+
+.table-row {
+  height: 50px !important; /* Adjust the height as needed */
+}
+.blue-background-column {
+  background-color: #d5edf8; /* Blue color */
+  color: rgb(63, 51, 51); /* White text for contrast */
+  text-align: center; /* Center align for text */
+}
+
+.blue-background-row .blue-background-column {
+  background-color: #d5edf8; 
+  color: #0e0606; 
+}
+.ant-table-wrapper .ant-table-container table>thead>tr:first-child >*:first-child {
+  background-color: #d5edf8;
+  color: #0e0606; 
+
+}
+.ant-table-tbody > tr:hover > td.blue-background-column {
+  background-color: #d5edf8 !important; /* Change this to your desired hover color */
+}
+.tbaletotals {
+background-color: #f5f5f5;
+font-weight: bold;
+}
+/* Prevent table row background color from changing on hover */
+/* Disable table row hover background */
+.ant-table-tbody > tr:hover > td {
+  background: none !important;
+}
+
