--- a/src/Components/Assets/css/Style.css
+++ b/src/Components/Assets/css/Style.css
@@ -588,7 +588,7 @@ font-weight: bold;
 
 /* Transition effects */
 .ant-layout-sider {
-  transition: all 0.3s ease;
+  transition: all 0.1s ease;
 }
 
 .ant-menu-item {
@@ -612,3 +612,133 @@ font-weight: bold;
 .ant-menu-dark.ant-menu-inline .ant-menu-sub.ant-menu-inline {
   background-color: #555e9f;
 }
+/* login */
+.login-page-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(to right, #2e8b57, #ffffff);
+}
+
+.login-wrapper {
+  display: flex;
+  width: 70%;
+  height: 500px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.welcome-section {
+  background: #2e8b57;
+  color: #fff;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+
+.logo {
+  width: 100px;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.register-button {
+  background: #fff;
+  color: #2e8b57;
+  border: none;
+  margin-top: 20px;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.register-button:hover {
+  background: #2e8b57;
+  color: #fff;
+}
+
+.login-section {
+  flex: 1;
+  background: #fff;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.login-section h2 {
+  font-size: 24px;
+  color: #2e8b57;
+}
+
+.login-section p {
+  margin-bottom: 20px;
+  color: #555;
+}
+
+.login-button {
+  background: #2e8b57;
+  color: #fff;
+  width: 100%;
+}
+
+.login-button:hover {
+  background: #236c48;
+}
+
+.remember-forgot {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/* img upload */
+.image-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+}
+
+.hover-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s;
+  border-radius: 8px;
+}
+
+.image-container:hover .hover-overlay {
+  opacity: 1;
+}
+
+.icon {
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.icon:hover {
+  transform: scale(1.2);
+}
+
