--- a/src/Components/Assets/css/Style.css
+++ b/src/Components/Assets/css/Style.css
@@ -778,3 +778,11 @@ font-weight: bold;
 .ant-modal .ant-modal-content{
   padding: 7px 15px !important;
 }
+@keyframes rotate {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.rotating-icon {
+    animation: rotate 2s linear infinite;
+}
